================================ Next release ================================

Bug fixes:
    - Memory leak when making loggers per context-specific logger system, like
      e.g. HTTPConnections or SSHServerTransports.

========================== Release 0.5.7 2014-03-24 ==========================

Features:
    - The zookeeper-contrib now accepts a parameter, ``default_encoded_acls``,
      which is expected to be a list of pre-encoded ACLs. This is the
      recommended way of passing default ACLs to clients provided by this
      provider since it doesn't need to know the exact passwords for these
      ACLs, just their base64-encoded hashes.

========================== Release 0.5.6 2013-04-09 ==========================

Bug fixes:
    - A regression in 0.5.5 broke customization of logging.

========================== Release 0.5.5 2013-04-09 ==========================

Bug fixes:
    - Specifying a custom reactor with the "-r"-argument to piped should now
      work again.

Features:
    - The constructor of ``piped.event.Event`` now takes a single keyword
      argument: ``async``, which, if ``True`` makes ``.__call__`` return
      a deferred which callbacks when all the listeners have finished
      processing the event.

========================== Release 0.5.3 2013-01-06 ==========================

Features:
    - New StatsD-contrib that handles one or more statsd-connections, as well
      as a reporter-service for various process metrics.

    - ZooKeeper-contrib now authenticates and creates nodes with default ACLs.

    - ZooKeeper-client learned create_recursive.


========================== Release 0.5.2 2012-12-01 ==========================

Features:
    - PostgresListener now knows about advisory locks.

    - The database-contrib now has a service-module with two
      PostgresListener-base-classes, for making services that should react to
      Postgres-notifications.

    - ``piped.util`` gained a contextual ``DeferredLock`` and a